# git-transform-repo

./: COPYING  COPYING.gpl  COPYING.mit  Cargo.toml  README.md
docs/: design.md  fast-import_grammar.bnf  filter-repo.md  git_contrib.md  parsing_discrepancies.md  strange_objects.md  transformations.md  vcs_compat.md
fast-export/: COPYING.gpl  COPYING.mit  Cargo.toml  README.md
fast-export/src/: ast.rs  bytes.rs  command.rs  dump.rs  lib.rs  parse.rs  pretty.rs  refs.rs
fast-export/src/parse/: commit.rs  data.rs  input.rs  mod.rs  parser.rs  pool.rs  quote.rs  span.rs
src/: ast.rs  builder.rs  filter.rs  lib.rs  parser.rs  pretty.rs
transform-repo/: Cargo.toml
transform-repo/src/: builder.rs  filter.rs  lib.rs  parser.rs  py_bytes.rs
