[package]
name = "fast-export"
version = "0.1.0"
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
description = "Library for generating git fast-export streams, to export data as a repository"
license = "MIT OR GPL-2.0-only-with-linking-exception"
keywords = ["git", "fast-export", "fast-import"]
categories = ["development-tools"]

[dependencies]
bstr = "1.9.0"
thiserror = "1.0.57"
