[package]
name = "fast-export"
version = "0.1.0"
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
description = "Library for generating git fast-export streams, to export data as a repository"
license = "GPL-2.0-only WITH GCC-exception-2.0"
keywords = ["git", "fast-export", "fast-import"]
categories = ["development-tools"]

[dependencies]
bstr = "1.9.0"
enumflags2 = "0.7.9"
memchr = "2.7.1"
paste = "1.0.14"
static_assertions = "1.1.0"
thiserror = "1.0.57"
