[package]
name = "transform-repo"
version = "0.1.0"
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
description = "A successor to git-filter-repo for advanced repo transformations"
readme = "../README.md"
license = "GPL-2.0-only WITH GCC-exception-2.0"
keywords = ["git", "filter-repo"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.80"
fast-export = { path = "../fast-export" }
paste = "1.0.14"
pyo3 = { version = "0.20.2", features = ["anyhow", "auto-initialize"] }
regex = "1.10.3"
